<resources>

    <string name="yceshop_list">商品列表</string>
    <string name="yceshop_shopName">中盈自营</string>
    <string name="yceshop_address">辽宁大连</string>

    <!--<string name="wsdl_error">网络加载失败，请确认连接网络</string>-->
    <string name="app_name">考核</string>
    <string name="text_zonghe">综合</string>
    <string name="text_xiaoliang">销量</string>
    <string name="text_xinpin">新品</string>
    <string name="text_jiage">价格</string>
    <string name="text_denglu">登录</string>
    <string name="text_queding">确定</string>
    <string name="text_shopping_cart">购物车</string>
    <string name="scan_tips">请将二维码/条形码放入框内，即可自动扫描</string>
    <string name="text_0006">收货人：</string>
    <string name="text_0007">收货地址：</string>
    <string name="text_0008">支付方式</string>
    <string name="text_0010">发票信息</string>
    <string name="text_0011">买家留言</string>
    <string name="text_0013">选填:对本次交易的说明</string>
    <string name="text_0014">小计:</string>
    <string name="text_0015">合计:</string>
    <string name="text_0016">¥</string>
    <string name="text_0017">提交订单</string>
    <string name="text_0018">发票类型</string>
    <string name="text_0019">纸质发票</string>
    <string name="text_0020">电子发票</string>
    <string name="text_0021">增值税发票</string>
    <string name="text_0022">发票抬头</string>
    <string name="text_0023">个人</string>
    <string name="text_0024">单位</string>
    <string name="text_0025">收票人信息</string>
    <string name="text_0032">明细</string>
    <string name="text_0036">发票内容</string>
    <string name="text_0037">单位名称：</string>
    <string name="text_0038">纳税人识别号：</string>
    <string name="text_0039">注册地址：</string>
    <string name="text_0040">注册电话：</string>
    <string name="text_0041">开户银行：</string>
    <string name="text_0042">银行账户：</string>
    <string name="text_0047">请选择</string>
    <string name="text_0048">收票人邮箱</string>
    <string name="text_0049">用来接收电子发票</string>
    <string name="text_0050">在线支付</string>
    <string name="text_0051">线下支付</string>
    <string name="text_0053">我的订单</string>
    <string name="text_0054">查看全部订单</string>
    <string name="text_0055">待付款</string>
    <string name="text_0056">待发货</string>
    <string name="text_0057">待收货</string>
    <string name="text_0058">待评价</string>
    <string name="text_0059">退单</string>
    <string name="text_0060">我的收藏</string>
    <string name="text_0061">合作</string>
    <string name="text_0062">设置</string>
    <string name="text_0064">编辑</string>
    <string name="text_0065">删除</string>
    <string name="text_0067">头像/LOGO</string>
    <string name="text_0068">账号</string>
    <string name="text_0069">我的收货地址</string>
    <string name="text_0070">修改密码</string>
    <string name="text_0071">管理收货地址</string>
    <string name="text_0072">默认地址</string>
    <string name="text_0073">新增收货地址</string>
    <string name="text_0074">所在地区</string>
    <string name="text_0075">收货人</string>
    <string name="text_0076">联系电话</string>
    <string name="text_0077">邮编</string>
    <string name="text_0078">所在地区</string>
    <string name="text_0079">详细地址</string>
    <string name="text_0080">保存</string>
    <string name="text_0081">请输入收货人</string>
    <string name="text_0082">请输入联系电话</string>
    <string name="text_0083">请输入邮编（非必填）</string>
    <string name="text_0084">订单号：</string>
    <string name="text_0087">实付款</string>
    <string name="text_0088">发票抬头：</string>
    <string name="text_0089">发票内容：</string>
    <string name="text_0090">查看发票</string>
    <string name="text_0091">订单编号：</string>
    <string name="text_0092">创建时间：</string>
    <string name="text_0093">取消订单</string>
    <string name="text_0095">订单金额</string>
    <string name="text_0096">再次购买</string>
    <string name="text_0097">退货申请</string>
    <string name="text_0098">付款时间：</string>
    <string name="text_0099">发货时间：</string>
    <string name="text_0100">确认入库</string>
    <string name="text_0101">成交时间：</string>
    <string name="text_0102">商品状态</string>
    <string name="text_0103">承运公司：</string>
    <string name="text_0104">运单编号：</string>
    <string name="text_0105">物流信息</string>
    <string name="text_0106">商品管理</string>
    <string name="text_0107">统计分析</string>
    <string name="text_0108">邀请加入</string>
    <string name="text_0109">商品出售</string>
    <string name="text_0110">请选择要出库商品</string>
    <!--<string name="text_0111">确认入库</string>-->
    <string name="text_0112">取消</string>
    <string name="text_0115">请输入防伪码</string>
    <string name="text_0116">绑定</string>
    <string name="text_0117">查看待入库商品列表</string>
    <string name="text_0118">提示</string>
    <string name="text_0119">共计：&#160;</string>
    <string name="text_0121">是否扫码确认后在移除</string>
    <string name="text_0122">搜索</string>
    <string name="text_0123">库存预警</string>
    <string name="text_0124">请输入商品名</string>
    <string name="text_0125">库存状况</string>
    <string name="text_0126">售出：</string>
    <string name="text_0127">库存：</string>
    <string name="text_0128">串货单管理-串出</string>
    <string name="text_0129">串货单管理-串入</string>
    <string name="text_0130">商品调拨</string>
    <string name="text_0131">全部订单</string>
    <string name="text_0132">近三单</string>
    <string name="text_0136">提示：</string>
    <string name="text_0139">查看待出售商品列表</string>
    <string name="text_0140">新建</string>
    <string name="text_0142">串货单号：</string>
    <string name="text_0143">创建时间：</string>
    <string name="text_0144">串货信息：</string>
    <string name="text_0145">关闭串货单</string>
    <string name="text_0146">关闭时间：</string>
    <string name="text_0147">关闭原因：</string>
    <string name="text_0148">退货说明：</string>
    <string name="text_0149">收货经销商：</string>
    <string name="text_0151">关闭说明</string>
    <string name="text_0152">关闭说明限200字以内</string>
    <string name="text_0154">取消退款</string>
    <string name="text_0155">退单号：</string>
    <string name="text_0156">申请原因：</string>
    <string name="text_0157">退货进度：</string>
    <string name="text_0159">申请时间：</string>
    <string name="text_0168">您的账号已在别的设备上登录，请重新登录</string>
    <string name="text_0169">买家留言：</string>
    <string name="text_0170">手机中尚未安装应用市场无法评分</string>
    <string name="text_0171">扫描到的商品为：</string>
    <string name="text_0172">\n是否确认？</string>
    <string name="text_0177">购买海淘商品需验证您的身份信息</string>
    <string name="text_0178">关注微信服务号联系客服</string>
    <string name="text_0179">联系客服</string>
    <string name="text_0180">请填写正确的个人身份信息并授权我们向外汇局和海关申报，我们承诺妥善保管及使用您的信息</string>
    <string name="text_0181">税费</string>
    <string name="text_0182">立即进入</string>
    <string name="text_0183">请输入手机号</string>
    <string name="text_0184">密码</string>
    <string name="text_0185">请输入密码</string>
    <string name="text_0186">忘记密码?</string>
    <string name="text_0187">经销商登录</string>
    <string name="text_0188">快速注册</string>
    <string name="text_0189">登录表示您已同意</string>
    <string name="text_0190">《网络服务协议》</string>
    <string name="text_0191">请输入手机号</string>
    <string name="text_0192">成为合作伙伴</string>
    <string name="text_0193">和</string>
    <string name="text_0194">《合作伙伴服务协议》</string>
    <string name="text_0195">绑定手机号</string>
    <string name="text_0196">验证码</string>
    <string name="text_0197">请输入验证码</string>
    <string name="text_0198">获取验证码</string>
    <string name="text_0199">申请成为合作伙伴(个人)</string>
    <string name="text_0200">申请成为合作伙伴(企业)</string>
    <string name="text_0201">您正在申请将该经销商升级为您的准代理商，请准确输入申请意见！</string>
    <string name="text_0202">同意协议并继续</string>
    <string name="text_0203">配送方式</string>
    <string name="text_0204">真实姓名和身份证号务必真实有效，以确保日后提现顺畅！</string>
    <string name="text_0205">下一步</string>
    <string name="text_0206">请输入身份证上的姓名（必填）</string>
    <string name="text_0207">请输入您的身份证号（必填）</string>
    <string name="text_0208">我愿意提供详细身份信息，争取成为高级合作伙伴。</string>
    <string name="text_0209">完成注册</string>
    <string name="text_0210">电子邮箱</string>
    <string name="text_0211">地址</string>
    <string name="text_0213">请输入电子邮箱（非必填）</string>
    <string name="text_0214">请选择（必选）</string>
    <string name="text_0215">请输入详细地址（必填）</string>
    <string name="text_0216">请输入介绍（非必填）</string>
    <string name="text_0217">请输入证件号（必填）</string>
    <string name="text_0218">请输入法人姓名（必填）</string>
    <string name="text_0219">请输入法人身份证号（必填）</string>
    <string name="text_0220">法人姓名和身份证号务必真实有效，以确保日后提现顺畅！</string>
    <string name="text_0221">联系人姓名</string>
    <string name="text_0222">请输入联系人姓名（非必填）</string>
    <string name="text_0223">联系电话</string>
    <string name="text_0224">请输入联系电话（非必填）</string>
    <string name="text_0225">三证合一或营业执照、税务登记证、组织机构代码证</string>
    <string name="text_0226">请上传1-4张销售许可证</string>
    <string name="text_0227">单位名称</string>
    <string name="text_0228">纳税人识别码</string>
    <string name="text_0229">注册地址</string>
    <string name="text_0230">注册电话</string>
    <string name="text_0231">开户银行</string>
    <string name="text_0232">开户账号</string>
    <string name="text_0234">请输入单位名称</string>
    <string name="text_0235">请输入纳税人识别码</string>
    <string name="text_0236">请输入注册地址</string>
    <string name="text_0237">请输入注册电话</string>
    <string name="text_0238">请输入开户银行</string>
    <string name="text_0239">请输入开户账号</string>
    <string name="text_0240">意见反馈</string>
    <string name="text_0241">钱包</string>
    <string name="text_0242">余额</string>
    <string name="text_0243">冻结金额 2,000元</string>
    <string name="text_0244">橙币</string>
    <string name="text_0245">提现</string>
    <string name="text_0246">银行卡</string>
    <string name="text_0247">账单</string>
    <string name="text_0248">会员登录</string>
    <string name="text_0249">会员注册</string>
    <string name="text_0250">添加商品</string>
    <string name="text_0251">酒类直供 52度五粮液500ml 普五浓香型高度白酒</string>
    <string name="text_0252">一直信赖盈橙E品，东西收到，很满意！！真的是超级好的卖家，解答疑问速度非常快，而且不厌其烦，细致认真。关键东西是正品，而且发货速度超快！值得信赖，下次还来！！！</string>
    <string name="text_0253">2016-06-06</string>
    <string name="text_0254">规格. 五年陈酿</string>
    <string name="text_0251">标题</string>
    <string name="text_0252">价格（￥）</string>


</resources>
